.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bootcampjs-js
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: bootcampjs-js
